Fix: alignment on mobile for mission and vardan sections

--- a/netlify/functions/preview/src/sass/components/_vardan-cards.scss
+++ b/netlify/functions/preview/src/sass/components/_vardan-cards.scss
@@ -155,7 +155,7 @@
 
     /* Title is full width on mobile */
     .giving-levels-title-wrapper {
-        width: 90vw;
+        width: 100%;
     }
 
     /* Mobile screens - stack vertically */
@@ -176,7 +176,7 @@
 
     /* Title is 3/4 width on tablet */
     .giving-levels-title-wrapper {
-        width: 70vw;
+        width: 75vw;
     }
 
     /* Tablet screens - 2 cards in first row, 1 centered in second */
@@ -198,7 +198,7 @@
 
     /* Title is 1/2 width on desktop */
     .giving-levels-title-wrapper {
-        width: 55vw;
+        width: 65vw;
     }
 
     /* Desktop screens - 3 cards in a row */
